[package]
name = "hubris"
version = "0.1.0"
authors = ["Jared Roesch <roeschinc@gmail.com>"]

[lib]
name = "hubris"
path = "src/hubris/lib.rs"

[[bin]]
name = "hubris"
path = "src/bin/hubris.rs"

[dependencies.hubris_syntax]
path = "src/hubris_syntax"

[dependencies.readline]
git = "https://github.com/shaleh/rust-readline"

[dependencies]
llvm-sys = "*"
log = "*"
env_logger = "*"
gcc = "*"
docopt = "0.6"
iron = "*"
rustc-serialize = "0.3"
rmp-serde = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
term = "*"
