[package]
name = "hubris_syntax"
version = "0.1.0"
authors = ["Jared Roesch <jroesch@cs.uw.edu>"]
build = "build.rs"

[lib]
name = "hubris_syntax"

[dependencies.lalrpop-util]
version = "0.9.0"

[build-dependencies.lalrpop]
version = "0.9.0"

[dependencies.pretty]
git = "https://github.com/hubris-lang/pretty"

[dependencies]
log = "*"
gcc = "*"
rustc-serialize = "*"
rmp-serde = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
term = "*"
unicode-xid = "*"
